kubernetes/crane/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crane
  labels:
    name: crane
    type: dev
