kubernetes/crane/05-01-deployment-crane-impression-worker.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: crane-impression-worker
  namespace: crane
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: crane
        proc: worker
        spec: impression
    spec:
      imagePullSecrets:
        - name: regsecret
      containers:
      - name: crane-master
        # Pulls the default Minio image from Docker Hub
        image: registry.clickyab.ae/clickyab/crane_master:latest
        livenessProbe:
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 180
          timeoutSeconds: 15
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 1
          timeoutSeconds: 15
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 1
        command: [ "/app/bin/impression-worker"]
        ports:
        - name: web-health
          containerPort: 9000
