kubernetes/crane/05-04-deployment-crane-supplier-server.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: crane
    k8s-app: supplier-crane
    spec: supplier
  name: crane-supplier-server
  namespace: crane
spec:
  replicas: 4
  selector:
    matchLabels:
      app: crane
      k8s-app: supplier-crane
      spec: supplier
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: crane
        k8s-app: supplier-crane
        spec: supplier
    spec:
      containers:
      - command:
        - /app/bin/supplier
        image: registry.clickyab.ae/clickyab/crane_master:469
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        name: crane-master
        ports:
        - containerPort: 9000
          name: web-health
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /secrets
          name: secrets
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regsecret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: secrets
        secret:
          defaultMode: 420
          secretName: jwt-token
