kubernetes/crane/05-05-deployment-crane-ctrpage-worker.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: crane
    proc: worker
    spec: ctrpage
  name: crane-ctrpage-worker
  namespace: crane
spec:
  replicas: 0
  selector:
    matchLabels:
      app: crane
      proc: worker
      spec: ctrpage
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: crane
        proc: worker
        spec: ctrpage
    spec:
      containers:
      - command:
        - /app/bin/ctrpage-worker
        image: registry.clickyab.ae/clickyab/crane_master:624
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        name: crane-master
        ports:
        - containerPort: 9000
          name: web-health
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
      imagePullSecrets:
      - name: regsecret
