kubernetes/crane/06-00-service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: redis
  name: redis
  namespace: crane
spec:
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
