kubernetes/crane/06-01-service-crane-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: crane-app
  name: crane-service
  namespace: crane
spec:
  ports:
  - name: crane-port
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    k8s-app: crane-app
