kubernetes/crane/07-00-ingress-supplier-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: supplier-ingress
  namespace: crane
spec:
  rules:
  - host: supplier.clickyab.com
    http:
      paths:
      - backend:
          serviceName: supplier-service
          servicePort: 9000
        path: /
  - host: app.clickyab.com
    http:
      paths:
      - backend:
          serviceName: supplier-service
          servicePort: 9000
        path: /
  - host: v.clickyab.com
    http:
      paths:
      - backend:
          serviceName: supplier-service
          servicePort: 9000
        path: /
