kubernetes/crane/07-02-ingress-crane-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: crane-ingress
  namespace: crane
spec:
  rules:
  - host: demand.3rdad.com
    http:
      paths:
      - backend:
          serviceName: crane-service
          servicePort: 9000
        path: /
